--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ python = "^3.10"
 click = "^8.1.7"
 requests = "^2.31.0"
 appdirs = "^1.4.4"
+pytest = "^8.0.2"
 
 [tool.poetry.scripts]
 extmake = "extmake.cli:main"
